Updated latest.json generation. Instead of editing files in source control, it uses a template to create files that are in .gitignore. This means less file churn on version bumps.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ HandBrakeInterop.XmlSerializers.dll
 *.csproj.user
 *.user
 Installer/Files/*
+Installer/Test/*
+Installer/latest.json
+Installer/latest-beta.json
