--- a/VidCoderWindowlessCLI/VidCoderWindowlessCLI.csproj
+++ b/VidCoderWindowlessCLI/VidCoderWindowlessCLI.csproj
@@ -6,6 +6,7 @@
     <Product>VidCoderWindowlessCLI</Product>
     <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DefineConstants>DEBUG</DefineConstants>
