Changed target framework to x64 to remove warnings about HandBrakeInterop references.

--- a/VidCoderCommon.Tests/VidCoderCommon.Tests.csproj
+++ b/VidCoderCommon.Tests/VidCoderCommon.Tests.csproj
@@ -9,6 +9,7 @@
     <AssemblyTitle>VidCoderCommon.Tests</AssemblyTitle>
     <Product>VidCoderCommon.Tests</Product>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <ItemGroup>
