--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.WindowsAPICodePack-Shell" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Ookii.Dialogs.Wpf" Version="1.1.0" />
     <PackageReference Include="PipeMethodCalls" Version="1.0.1" />
     <PackageReference Include="reactiveui" Version="9.4.1" />
     <PackageReference Include="ReactiveUI.WPF" Version="9.4.1" />
@@ -47,9 +48,6 @@
   <ItemGroup>
     <Reference Include="HandBrake.Interop">
       <HintPath>..\Lib\HandBrake.Interop.dll</HintPath>
-    </Reference>
-    <Reference Include="Ookii.Dialogs.Wpf">
-      <HintPath>..\Lib\Ookii.Dialogs.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="PresentationFramework.Aero2" />
