Added video compare feature. This allows you to quickly switch between the original and encoded videos to evaluate your encoding quality. Right click on a completed item and select "Compare against original". This works on any encode that starts at the beginning of the video, so you can lower the end range to compare smaller test encodes. Fixed issue with main UI not applying output file conflict resolution. Fixed subtitle column reading 0/0 when subtitles are on source but not selected.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -14,6 +14,7 @@
     <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    <OutputPath>bin/$(Configuration)</OutputPath>
     <Platforms>x64</Platforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -73,11 +74,16 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="Model\Config\Config.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Config.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
     <Compile Update="Model\Config\Config.cs">
-      <DependentUpon>Config.tt</DependentUpon>
-      <SubType>Code</SubType>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
+      <DependentUpon>Config.tt</DependentUpon>
     </Compile>
     <Compile Update="Resources\ChapterMarkersRes.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -286,11 +292,15 @@
     <Resource Include="Icons\copy.png" />
     <Resource Include="Icons\save.png" />
     <Resource Include="Icons\win7foldericon.png" />
+    <Resource Include="Icons\Compare.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VidCoderCLI\VidCoderCLI.csproj" />
     <ProjectReference Include="..\VidCoderCommon\VidCoderCommon.csproj" />
     <ProjectReference Include="..\VidCoderWindowlessCLI\VidCoderWindowlessCLI.csproj" />
     <ProjectReference Include="..\VidCoderWorker\VidCoderWorker.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 </Project>
