--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -217,6 +217,8 @@
     <EmbeddedResource Include="Resources\Translations\*.*.resx">
       <ManifestResourceName>$(TargetName).Resources.%(Filename)</ManifestResourceName>
     </EmbeddedResource>
+    <None Remove="Icons\VolumeMute.png" />
+    <None Remove="Icons\VolumeOn.png" />
     <None Include="Model\Config\Config.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Config.cs</LastGenOutput>
@@ -293,6 +295,8 @@
     <Resource Include="Icons\save.png" />
     <Resource Include="Icons\win7foldericon.png" />
     <Resource Include="Icons\Compare.png" />
+    <Resource Include="Icons\VolumeMute.png" />
+    <Resource Include="Icons\VolumeOn.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VidCoderCLI\VidCoderCLI.csproj" />
