--- a/VidCoderCommon/VidCoderCommon.csproj
+++ b/VidCoderCommon/VidCoderCommon.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="System.Reactive.Linq" Version="4.0.0" />
     <PackageReference Include="System.Reactive.PlatformServices" Version="4.0.0" />
     <PackageReference Include="System.Reactive.Windows.Threading" Version="4.0.0" />
+    <PackageReference Include="System.Text.Json" Version="5.0.1" />
     <PackageReference Include="valueinjecter" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup>
