--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="DesktopBridge.Helpers" Version="1.2.2" />
     <PackageReference Include="DynamicData" Version="7.1.1" />
     <PackageReference Include="Fluent.Ribbon" Version="7.1.0" />
     <PackageReference Include="Microsoft.AnyContainer" Version="1.0.0-beta201808141" />
@@ -42,6 +43,7 @@
     <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
     <PackageReference Include="System.Reactive.PlatformServices" Version="5.0.0" />
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
+    <PackageReference Include="UTF.Unknown" Version="2.3.0" />
     <PackageReference Include="valueinjecter" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup>
