--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
     <PackageReference Include="UTF.Unknown" Version="2.3.0" />
     <PackageReference Include="valueinjecter" Version="3.2.0" />
+    <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HandBrake.Interop">
