--- a/.github/ISSUE_TEMPLATE/crash_report.yml
+++ b/.github/ISSUE_TEMPLATE/crash_report.yml
@@ -1,6 +1,6 @@
 name: Crash Report
-description: Report a VidCoder crash: when the program shows you an error message and closes unexpectedly.
-labels: [crash]
+description: "Report a VidCoder crash: when the program shows you an error message and closes unexpectedly."
+labels: [crash, bug]
 body:
   - type: markdown
     attributes:
