Removed obsolete VidCoderWorker manifest. Added app manifest to declare us as per monitor DPI aware, which fixes window maximization in some corner cases in multi-monitor setups with different DPIs.

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -16,6 +16,7 @@
     <OutputPath>bin/$(Configuration)</OutputPath>
     <Platforms>x64</Platforms>
     <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DefineConstants>DEBUG</DefineConstants>
