Updated bug report to mention another way to get logs.

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -24,7 +24,7 @@ body:
     id: log
     attributes:
       label: Encode Log
-      description: "You can right click on a completed item and click \"Copy log\" or click \"Copy\" in the log window."
+      description: "You can right click on a completed item and click \"Copy log\" or click \"Copy\" in the log window. Or click on \"Windows\" -> \"Log\" -> \"Copy\" for scan errors."
       placeholder: Paste the encode log here.
       render: text
     validations:
