--- a/VidCoderFileWatcher/VidCoderFileWatcher.csproj
+++ b/VidCoderFileWatcher/VidCoderFileWatcher.csproj
@@ -1,17 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-VidCoderWindowsService-1bb22054-fa2a-4425-9aac-9cf566da03d1</UserSecretsId>
+    <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <OutputPath>bin/$(Configuration)</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" />
     <PackageReference Include="PipeMethodCalls" />
     <PackageReference Include="PipeMethodCalls.NetJson" />
     <PackageReference Include="System.Data.SQLite.Core" />
@@ -20,4 +18,5 @@
   <ItemGroup>
     <ProjectReference Include="..\VidCoderCommon\VidCoderCommon.csproj" />
   </ItemGroup>
+
 </Project>
