--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,7 +3,6 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="Clowd.Squirrel" Version="2.11.1" />
     <PackageVersion Include="ControlzEx" Version="5.0.1" />
     <PackageVersion Include="Fluent.Ribbon" Version="9.0.4" />
     <PackageVersion Include="Microsoft.AnyContainer" Version="1.0.0-beta201808141" />
@@ -22,6 +21,7 @@
     <PackageVersion Include="System.Text.Json" Version="5.0.1" />
     <PackageVersion Include="UTF.Unknown" Version="2.3.0" />
     <PackageVersion Include="valueinjecter" Version="3.2.0" />
+    <PackageVersion Include="Velopack" Version="0.0.219" />
     <PackageVersion Include="WinCopies.WindowsAPICodePack.Shell" Version="2.1.1" />
     <PackageVersion Include="Castle.Core" Version="4.4.1" />
     <PackageVersion Include="NSubstitute" Version="4.2.2" />
